--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body
 {
-    color: #333;
+    color: rgb(51, 16, 209);
     text-align: center;
-    font-family: Arial;
+    font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0;
