--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,18 @@
 body
 {
+    background: #1e1f24;
     color: rgb(51, 16, 209);
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera
