--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     background: #1e1f24;
-    color: rgb(51, 16, 209);
+    color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -11,7 +11,7 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
@@ -47,5 +47,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
